--- a/app/src/main/module/AndroidManifest.xml
+++ b/app/src/main/module/AndroidManifest.xml
@@ -164,11 +164,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.moko.ps101m.activity.PosGpsLR1110FixActivity"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
             android:name="com.moko.ps101m.activity.device.ExportDataActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -200,6 +195,9 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.setting.NetworkSettingsActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".activity.setting.ThreeAxisDataReportActivity"
             android:screenOrientation="portrait"/>
 
         <service android:name="com.moko.ps101m.service.DfuService" />
