网络设置页面功能、扫描过滤功能

--- a/app/src/main/module/AndroidManifest.xml
+++ b/app/src/main/module/AndroidManifest.xml
@@ -43,15 +43,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.moko.ps101m.activity.lora.LoRaConnSettingActivity"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name="com.moko.ps101m.activity.lora.LoRaAppSettingActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
             android:name="com.moko.ps101m.activity.PosBleFixActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -172,33 +163,42 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.lora.MessageTypeSettingsActivity"
-            android:screenOrientation="portrait"/>
-
-        <activity android:name=".activity.filter.FilterMkPirActivity"
+        <activity
+            android:name=".activity.filter.FilterMkPirActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activity.setting.StandbyModeActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.StandbyModeActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.AlarmFunctionActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.AlarmFunctionActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.AlertAlarmSettingActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.AlertAlarmSettingActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.AlarmSosSettingActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.AlarmSosSettingActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.device.OnOffSettingsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.device.OnOffSettingsActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.NetworkSettingsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.NetworkSettingsActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.ThreeAxisDataReportActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.ThreeAxisDataReportActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.setting.NtpSeverSettingActivity"
+            android:screenOrientation="portrait" />
 
         <service android:name="com.moko.ps101m.service.DfuService" />
     </application>
