--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 33
         versionCode 1
         versionName "1.0.0"
+        multiDexEnabled true
 
         def formatDate = new Date().format("yyyyMMddHHmm")
         setProperty("archivesBaseName", "PS101M_${versionName}_${formatDate}")
