--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,15 +31,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.moko.ps101m.activity.lora.LoRaConnSettingActivity"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name="com.moko.ps101m.activity.lora.LoRaAppSettingActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
             android:name="com.moko.ps101m.activity.PosBleFixActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -160,9 +151,6 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name="com.moko.ps101m.activity.lora.MessageTypeSettingsActivity"
-            android:screenOrientation="portrait"/>
-
         <activity android:name="com.moko.ps101m.activity.filter.FilterMkPirActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"/>
@@ -185,6 +173,9 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.setting.ThreeAxisDataReportActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".activity.setting.NtpSeverSettingActivity"
             android:screenOrientation="portrait"/>
 
         <provider
