--- a/ps101/src/main/AndroidManifest.xml
+++ b/ps101/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.moko.ps101m.activity.AboutActivity"
+            android:name="com.moko.ps101m.activity.Ps101AboutActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
