--- a/ps101/src/main/module/AndroidManifest.xml
+++ b/ps101/src/main/module/AndroidManifest.xml
@@ -164,40 +164,40 @@
             android:windowSoftInputMode="adjustPan" />
 
         <activity
-            android:name=".activity.filter.FilterMkPirActivity"
+            android:name="com.moko.ps101m.activity.filter.FilterMkPirActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
         <activity
-            android:name=".activity.setting.StandbyModeActivity"
+            android:name="com.moko.ps101m.activity.setting.StandbyModeActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.AlarmFunctionActivity"
+            android:name="com.moko.ps101m.activity.setting.AlarmFunctionActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.AlertAlarmSettingActivity"
+            android:name="com.moko.ps101m.activity.setting.AlertAlarmSettingActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.AlarmSosSettingActivity"
+            android:name="com.moko.ps101m.activity.setting.AlarmSosSettingActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.device.OnOffSettingsActivity"
+            android:name="com.moko.ps101m.activity.device.OnOffSettingsActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.NetworkSettingsActivity"
+            android:name="com.moko.ps101m.activity.setting.NetworkSettingsActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.ThreeAxisDataReportActivity"
+            android:name="com.moko.ps101m.activity.setting.ThreeAxisDataReportActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".activity.setting.NtpSeverSettingActivity"
+            android:name="com.moko.ps101m.activity.setting.NtpSeverSettingActivity"
             android:screenOrientation="portrait" />
 
         <service android:name="com.moko.ps101m.service.DfuService" />
