--- a/ps101/src/main/AndroidManifest.xml
+++ b/ps101/src/main/AndroidManifest.xml
@@ -151,32 +151,44 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name="com.moko.ps101m.activity.filter.FilterMkPirActivity"
+        <activity
+            android:name="com.moko.ps101m.activity.filter.FilterMkPirActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name="com.moko.ps101m.activity.setting.StandbyModeActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.moko.ps101m.activity.setting.StandbyModeActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.moko.ps101m.activity.setting.AlarmFunctionActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.moko.ps101m.activity.setting.AlertAlarmSettingActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.moko.ps101m.activity.setting.AlarmFunctionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.moko.ps101m.activity.setting.AlertAlarmSettingActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.moko.ps101m.activity.setting.AlarmSosSettingActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.moko.ps101m.activity.setting.AlarmSosSettingActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.moko.ps101m.activity.device.OnOffSettingsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.moko.ps101m.activity.device.OnOffSettingsActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.NetworkSettingsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.NetworkSettingsActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.ThreeAxisDataReportActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.ThreeAxisDataReportActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.setting.NtpSeverSettingActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.setting.NtpSeverSettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.setting.BleGatewayActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
