--- a/mokosupport/build.gradle
+++ b/mokosupport/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 33
-        versionCode 3
-        versionName "3.0"
+        namespace = "com.moko.support.ps101m"
+        minSdkVersion 26
+        targetSdk 34
+        versionCode 4
+        versionName "4.0"
     }
     buildTypes {
         release {
@@ -24,10 +25,11 @@ android {
 dependencies {
     api files('libs/mokoBleLib.jar')
     api 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-    api 'no.nordicsemi.android:dfu:2.3.0'
+    api 'no.nordicsemi.android:dfu:2.4.1'
     api 'org.greenrobot:eventbus:3.2.0'
     api 'com.elvishew:xlog:1.6.1'
-    implementation 'no.nordicsemi.android:ble:2.5.1'
+    implementation 'no.nordicsemi.android:ble:2.7.2'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
 
 //修改jar名字+将指定jar生成的地方
