--- a/ps101/build.gradle
+++ b/ps101/build.gradle
@@ -5,17 +5,17 @@ if (!isLibrary.toBoolean()) {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
 
     defaultConfig {
+        namespace = "com.moko.ps101m"
         if (!isLibrary.toBoolean()) {
-            applicationId "com.moko.ps101m"
+            applicationId = "com.moko.ps101m"
         }
-        minSdkVersion 18
-        targetSdkVersion 33
-        versionCode 5
-        versionName "1.0.5"
-        multiDexEnabled true
+        minSdkVersion 26
+        targetSdk 34
+        versionCode 6
+        versionName "1.0.6"
 
         def formatDate = new Date().format("yyyyMMddHHmm")
         setProperty("archivesBaseName", "PS101M_${versionName}_${formatDate}")
@@ -64,10 +64,6 @@ android {
         }
     }
 
-    lintOptions {
-        abortOnError false
-    }
-
     if (isLibrary.toBoolean()) {
         libraryVariants.all { variant ->
             if (variant.buildType.name == "release") {
@@ -94,6 +90,7 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
@@ -106,12 +103,12 @@ dependencies {
         implementation project(path: ':mokosupport')
     } else {
         implementation files('libs/mokoSupport.jar')
-        provided files('libs/mokoBleLib.jar')
+        compileOnly files('libs/mokoBleLib.jar')
         implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-        implementation 'no.nordicsemi.android:dfu:2.3.0'
+        implementation 'no.nordicsemi.android:dfu:2.4.1'
         implementation 'org.greenrobot:eventbus:3.2.0'
         implementation 'com.elvishew:xlog:1.6.1'
-        implementation 'no.nordicsemi.android:ble:2.5.1'
+        implementation 'no.nordicsemi.android:ble:2.7.2'
         implementation 'androidx.appcompat:appcompat:1.0.0'
     }
 }
