--- a/ps101/build.gradle
+++ b/ps101/build.gradle
@@ -52,6 +52,7 @@ android {
     lintOptions {
         disable 'SetTextI18n'
         checkReleaseBuilds false
+        abortOnError false
     }
 
     sourceSets {
