--- a/ps101/build.gradle
+++ b/ps101/build.gradle
@@ -5,16 +5,14 @@ if (!isLibrary.toBoolean()) {
 }
 
 android {
-    compileSdkVersion 33
+    namespace 'com.moko.ps101m'
+    compileSdk 34
 
     defaultConfig {
-        if (!isLibrary.toBoolean()) {
-            applicationId "com.moko.ps101m"
-        }
-        minSdkVersion 18
-        targetSdkVersion 33
-        versionCode 5
-        versionName "1.0.5"
+        minSdk 26
+        targetSdk 34
+        versionCode 6
+        versionName "1.0.6"
         multiDexEnabled true
 
         def formatDate = new Date().format("yyyyMMddHHmm")
@@ -93,9 +91,10 @@ android {
 }
 
 dependencies {
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
     implementation 'cn.carbswang.android:NumberPickerView:1.1.1'
@@ -108,10 +107,10 @@ dependencies {
         implementation files('libs/mokoSupport.jar')
         provided files('libs/mokoBleLib.jar')
         implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-        implementation 'no.nordicsemi.android:dfu:2.3.0'
-        implementation 'org.greenrobot:eventbus:3.2.0'
+        implementation 'no.nordicsemi.android:dfu:2.4.1'
+        implementation 'org.greenrobot:eventbus:3.3.1'
         implementation 'com.elvishew:xlog:1.6.1'
-        implementation 'no.nordicsemi.android:ble:2.5.1'
+        implementation 'no.nordicsemi.android:ble:2.7.3'
         implementation 'androidx.appcompat:appcompat:1.0.0'
     }
 }
