--- a/ps101/build.gradle
+++ b/ps101/build.gradle
@@ -5,7 +5,7 @@ if (!isLibrary.toBoolean()) {
 }
 
 android {
-    namespace "com.moko.ps101m"
+    namespace 'com.moko.ps101m'
     compileSdk 34
 
     defaultConfig {
@@ -13,6 +13,7 @@ android {
         targetSdk 34
         versionCode 7
         versionName "1.0.7"
+        multiDexEnabled true
 
         def formatDate = new Date().format("yyyyMMddHHmm")
         setProperty("archivesBaseName", "PS101M_${versionName}_${formatDate}")
@@ -92,17 +93,11 @@ dependencies {
     implementation files('libs/jxl.jar')
     if (!isLibrary.toBoolean()) {
         implementation project(path: ':mokosupport')
-        implementation 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.9'
+        implementation 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.10'
     } else {
-        compileOnly 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.9'
-        compileOnly files('libs/mokoBleLib.jar')
+        compileOnly 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.10'
+        compileOnly 'com.github.MOKO-Android-Base-Library:MKBleLib:1.0.1'
         implementation files('libs/mokoSupport.jar')
-        // mokosupport
-        implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-        implementation 'no.nordicsemi.android:dfu:2.4.1'
-        implementation 'org.greenrobot:eventbus:3.3.1'
-        implementation 'com.elvishew:xlog:1.6.1'
-        implementation 'no.nordicsemi.android:ble:2.7.3'
         implementation 'androidx.appcompat:appcompat:1.6.1'
     }
 }
