--- a/ps101/src/main/AndroidManifest.xml
+++ b/ps101/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.moko.ps101m">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name="com.moko.ps101m.BaseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ps101_ic_launcher"
         android:label="@string/app_name">
         <activity
             android:name="com.moko.ps101m.activity.GuideActivity"
