新增自动同步设备功能

--- a/ps101/build.gradle
+++ b/ps101/build.gradle
@@ -93,8 +93,10 @@ dependencies {
     implementation files('libs/jxl.jar')
     if (!isLibrary.toBoolean()) {
         implementation project(path: ':mokosupport')
+        implementation 'com.github.MOKO-Android-Base-Library:MKLoRaIoTLib:1.0.9'
         implementation 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.10'
     } else {
+        compileOnly 'com.github.MOKO-Android-Base-Library:MKLoRaIoTLib:1.0.9'
         compileOnly 'com.github.MOKO-Android-Base-Library:MKLoRaUILib:1.0.10'
         compileOnly 'com.github.MOKO-Android-Base-Library:MKBleLib:1.0.1'
         implementation files('libs/mokoSupport.jar')
